# Mimir

./: .clang-format  .gitignore  COPYRIGHT  Makefile.am  README.md  _config.yml  autogen.sh  configure.ac  contributors.txt  index.md
_docs/1.programming/: advanced-programming.md
_docs/1.programming-guidance/: basic-programming.md
_docs/2.config/: env-params.md
_docs/2.configuration-parameters/: features.md  settings.md  stat.md
_docs/3.developer/: code.md
_docs/3.developer-guidance/: design.md
benchmarks/bench_lg/: Makefile  octree_move_lg.cpp
benchmarks/bench_wc/: Makefile  wordcount.cpp
benchmarks/create_dataset/: create_dataset.py
doc/: 2015-01-16-Boyu-Zhang-Seminar.pptx  doxygen.conf  doxygen.dev.conf  doxygen.user.conf
doc/html/: index.html
doc/html/search/: search.js
examples/: Makefile  Makefile.am  Makefile.bgq  Makefile.comet  Makefile.linux  README.md  bfs.cpp  bfs_join.cpp  ccommon.c  common.cpp  common.h  cwordcount.c  join.cpp  mpi_bfs.sub  mpi_bfs_chimera.sub  mpi_bfs_rice.sub  mpi_octree_rice.sub  mpi_wc.sub  mpi_wc_chimera.sub  mpi_wc_rice.sub  octree_clustering.cpp  octree_move_lg.cpp  wordcount.cpp
extra/: clean_all.sh  create_dataset.py  gen_key_point_rr.py  gen_syn_data.sh  gen_syn_data.sub  one_ligand.txt  run_all.sh  tmp.config.txt
generator/: Makefile.am  README.md  common.cpp  common.h  gen_3d_points.cpp  gen_keys.cpp  gen_words.cpp
maint/: version.m4
publications/16_IPDPS/latex/: IEEEtran.bst  paper.tex
publications/latex/: Makefile  paper.bib
publications/latex/figs/: multithreaded_map_design.pptx
scripts/analysis/: README  README.md  cleanup_data.py  compare-mimir-scale-mira.sh  compare-mimir-scale.py  compare-mrmpi-memory-and-time-comet.sh  compare-mrmpi-memory-and-time-mira.sh  compare-mrmpi-memory-and-time.py  compare-mrmpi-time-comet.sh  compare-mrmpi-time.py  compare_time_breakdown.py  compare_total_memory_usage.py  compare_total_time.py  datafilter.py  draw-compare.py  draw.example.sh  draw_baseline_memory_and_time.sh  draw_baseline_time.sh  draw_bfs_dataset.py  draw_bfs_maxmem.sh  draw_bfs_time.sh  draw_combine_memory_and_time.sh  draw_feature_memory_and_time.sh  draw_figures.py  draw_mimir_memory_and_time.py  draw_mimir_memory_and_time.sh  draw_mimir_mrmpi_memory_and_time.py  draw_mimir_mrmpi_time.py  draw_mimir_total_time.py  draw_mimir_total_time.sh  draw_octree_breakdown.sh  draw_octree_dataset.py  draw_octree_maxmem.sh  draw_octree_time.sh  draw_wordcount_breakdown.sh  draw_wordcount_dataset.py  draw_wordcount_maxmem.sh  draw_wordcount_time.sh  figdrawer.py  figlib.py  (+6 more)
scripts/execute/: README.md  clean_logs.sh  config.example.h  run.job.sh  run_bfs.sub  run_mpi.sh  run_wc.1.sub  run_wc.16.sub  run_wc.2.sub  run_wc.32.sub  run_wc.4.sub  run_wc.64.sub  run_wc.8.sub  run_wc.sub  slurm.ibrun.sub  slurm.mpiexec.sub  slurm.srun.sub  sub_all.sh  test.example.sh
scripts/execute/analysis/: compare_time_breakdown.py  compare_total_memory_usage.py  draw_bfs_maxmem.sh  draw_bfs_time.sh  draw_octree_breakdown.sh  draw_octree_maxmem.sh  draw_wordcount_maxmem.sh  draw_wordcount_time.sh  draw_words_dist.sh  get_bfs_data.sh  get_octree_data.sh  get_wordcount_data.sh  mrmpirawdata_to_profile.py  syn_raw_data.sh  syn_workplace.sh
scripts/execute/bgq/: clear.sh  config.h  gen-bfs.sh  gen-octree.sh  gen-wordcount-wikipedia.sh  gen-wordcount.sh  go.sh  job.sh  job2.sh  make_all.sh  retry.sh  run-basic-scale.sh  run-basic.sh  run-bfs-scale.sh  run-bfs.sh  run-cps-scale.sh  run-cps.sh  run-cpskvhint-scale.sh  run-cpskvhint.sh  run-octree-scale.sh  run-octree.sh  run-pr-scale.sh  run-pr.sh  run-prkvhint-scale.sh  run-prkvhint.sh  run-singlenode.sh  run-wordcount.sh  run.sub  sub1-scale.sh  sub1.sh  sub2.sh  sub_bfs_jobs-scale.sh  sub_jobs-scale.sh  sub_jobs.sh  sub_jobs2.sh  sub_octree_jobs-scale.sh
scripts/execute/linux/: bgq-common.sh  clean_all.sh  clear.sh  create_bfs_scale.sh  gen-octree.sh  job.sh  make_all.sh  run-octree.sh  sub_jobs.sh
scripts/execute/pbs/: clean_all.sh  clean_logs.sh  config.h  make_all.sh  run.onenode.sub  run.onenode.tau.sub  run.sub  run_wordcount.sh  sub_all.sh  sub_all_dataset.sh  sub_jobs.sh
scripts/gen-bgq/: gen-octree-scale.sh  gen-octree-single.sh  gen-wordcount-scale.sh  gen-wordcount-single.sh  gen_key_point_rr.py  gen_wordcount_uniform.cc  job  make_tools.sh  octreegenerator.slurm.sub  retry.sh  run_split.sh  run_wordgen1.sh  run_wordgenerator.sh  split-bfs-scale.sh  split-half.c  split.slurm.sub  split_text_files  sub_octreegenerator.sh  sub_split.sh  sub_wordgenerator.sh  wordgen_fast.py  wordgenerator.pbs.sub
scripts/generator/: Makefile  create_dataset.py  gen-uniform-words.job  gen_3d_points.cpp  gen_key_point_rr.py  gen_syn_data.sh  gen_syn_data.sub  gen_uniform_words.cpp  octreegenerator.slurm.sub  run_split.sh  run_wordgen_local.sh  run_wordgenerator.sh  split.slurm.sub  split.sub  split_edge_file.sh  split_text_files.cpp  sub_octree_generate.sh  sub_octreegenerator.sh  sub_split.sh  sub_wordgenerator.sh  tmp.config.txt  wordcountgen.py  wordcountgen.sub  wordgenerator.pbs.sub  wordgenerator.py  wordgenerator.slurm.sub  wordgenerator.sub
src/: Makefile  Makefile.am  Makefile.bgq  Makefile.comet  Makefile.linux  README  alltoall.cpp  alltoall.h  basefilereader.h  baserecordformat.cpp  baserecordformat.h  baseshuffler.cpp  baseshuffler.h  bincontainer.h  callbacks.cpp  callbacks.h  chunkmanager.h  cmapreduce.cpp  cmapreduce.h  collectiveshuffler.cpp  collectiveshuffler.h  combinebincontainer.h  combinecollectiveshuffler.cpp  combinecollectiveshuffler.h  combinekvcontainer.cpp  combinekvcontainer.h  communicator.cpp  communicator.h  config.cpp  config.h  const.cpp  const.h  container.cpp  container.h  containeriter.h  context.h  dataobject.cpp  dataobject.h  fileparser.h  filereader.cpp  (+61 more)
test/: Makefile.am  bfs-p2l.py  bfs.py  check-bfs-join.sh  check-bfs.sh  check-join-split.sh  check-join.sh  check-oc-cb.sh  check-oc.py  check-oc.sh  check-wc-cb.sh  check-wc.sh  join.py  run-all.sh  verify-oc-results.py  wordcount.py
test/datasets/graph_1024v/: 10.16.0.txt
(+156 files in other folders)
