#
# (c) 2017 by University of Delaware, Argonne National Laboratory, San Diego
#     Supercomputer Center, National University of Defense Technology,
#     National Supercomputer Center in Guangzhou, and Sun Yat-sen University.
#
#     See COPYRIGHT in top-level directory.
#

CXX = mpicxx
SUBDIRS = src examples generator
